<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/par"

    android:maxHeight="1920dp"
    android:maxWidth="1080dp"
    android:minHeight="1920dp"
    android:minWidth="1080dp"
    tools:context=".Activity1">


    <Button
        android:id="@+id/user"
        android:layout_width="183dp"
        android:layout_height="41dp"
        android:layout_marginLeft="88dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/button_background"
        android:text="@string/user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/IPS" />

    <Button
        android:id="@+id/button7"
        android:layout_width="185dp"
        android:layout_height="41dp"
        android:layout_marginLeft="92dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="44dp"
        android:background="@drawable/button_background"
        android:text="@string/admin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user" />

    <TextView
        android:id="@+id/welcome"
        android:layout_width="165dp"
        android:layout_height="42dp"
        android:layout_marginLeft="104dp"
        android:layout_marginStart="104dp"
        android:layout_marginTop="34dp"
        android:fontFamily="serif-monospace"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#dfdede"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/to"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="160dp"
        android:layout_marginStart="160dp"
        android:fontFamily="serif-monospace"
        android:text="@string/to"
        android:textAlignment="center"
        android:textColor="#dfdede"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/IPS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <TextView
        android:id="@+id/IPS"
        android:layout_width="276dp"
        android:layout_height="67dp"
        android:layout_marginLeft="52dp"
        android:layout_marginStart="52dp"
        android:fontFamily="serif-monospace"
        android:text="@string/IPS"
        android:textAlignment="center"
        android:textColor="#dfdede"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/to" tools:targetApi="jelly_bean" />
</android.support.constraint.ConstraintLayout>