<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img"
    tools:context=".user_login">

    <Button
        android:id="@+id/alogin"
        android:layout_width="141dp"
        android:layout_height="43dp"
        android:layout_marginStart="108dp"
        android:layout_marginLeft="108dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="@drawable/button_background"
        android:text="@string/log_in"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="246dp" />

    <TextView
        android:id="@+id/AL"
        android:layout_width="218dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="89dp"
        android:layout_marginRight="89dp"
        android:fontFamily="serif-monospace"
        android:text="@string/user_login"
        android:textAlignment="center"
        android:textColor="#dfdede"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Registerhere"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="20dp"
        android:text="@string/register_here"
        android:textColor="#dfdede"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alogin" />

    <EditText
        android:id="@+id/alUsername"
        android:layout_width="322dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_edittext"
        android:drawableLeft="@drawable/ic_action_name"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:paddingLeft="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AL"
        android:autofillHints="" />


    <EditText
        android:id="@+id/alpassword"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/password"
        android:background="@drawable/rounded_edittext"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/ic_action_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/alUsername"
        android:autofillHints=""
        android:paddingStart="5dp" />


</android.support.constraint.ConstraintLayout>